WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270147
[view-transitions] Incorrect position when view transition is partially scrolled off viewport
https://bugs.webkit.org/show_bug.cgi?id=270147
Summary
[view-transitions] Incorrect position when view transition is partially scrol...
Tim Nguyen (:ntim)
Reported
2024-02-26 21:15:29 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-26 21:16:05 PST
<
rdar://problem/123668892
>
Matt Woodrow
Comment 2
2024-04-08 16:21:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26995
EWS
Comment 3
2024-04-11 02:27:42 PDT
Committed
277371@main
(3a5477d552d9): <
https://commits.webkit.org/277371@main
> Reviewed commits have been landed. Closing PR #26995 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug