[view-transitions] Incorrect position when view transition is partially scrolled off viewport. https://bugs.webkit.org/show_bug.cgi?id=270147 <rdar://123668892>

Reviewed by Tim Nguyen.

The ::view-transition-group pseudo-element is position:fixed, and thus attached to the initial
containing block. The computed transfrom from the old element to it's position as a child of this
pseudo needs to include the scroll position of the RenderView.

* LayoutTests/TestExpectations:
* Source/WebCore/dom/ViewTransition.cpp:
(WebCore::ViewTransition::copyElementBaseProperties):

Canonical link: https://commits.webkit.org/277371@main